[project]
name = "agent-tools"
version = "0.1.0"
description = "Reusable agent registry, capability checks, and access profiles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agentx = "agent_tools.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent_tools"]

[tool.setuptools.package-data]
agent_tools = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
